--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -101,6 +101,7 @@
     font-weight: bold;
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    line-height: 1;
 }
 /* 
 .popup-overlay .popup-popup .footer-buttons button {
