--- a/assets/css/dialog.css
+++ b/assets/css/dialog.css
@@ -3,8 +3,9 @@
     width: 400px;
 }
 .popup-overlay.dialog .popup-popup header {
-    padding: 7px 0;
+    padding: 12px 0;
     background-color: #135e96;
+    height: auto !important;
 }
 .popup-overlay.dialog .popup-popup header.no-title {
     background-color: #fff;
@@ -12,7 +13,7 @@
 }
 .popup-overlay.dialog .popup-popup header h2 {
     color: #fff;
-    font-size: 16px;
+    font-size: 20px;
 }
 .popup-overlay.dialog .popup-popup article {
     padding: 1.25rem 1.25rem 0.5rem;
