--- a/assets/css/dialog.css
+++ b/assets/css/dialog.css
@@ -18,6 +18,7 @@
     padding: 1.25rem 1.25rem 0.5rem;
     /* text-align: center; */
     font-size: 14px;
+    color: #333;
 }
 .popup-overlay.dialog.prompt label {
     display: block;
